fixed spacing. Added better way to close hamburger menu

--- a/src/src/App.css
+++ b/src/src/App.css
@@ -15,6 +15,14 @@
 .App-link {
   color: #61dafb;
 }
+.hamburger-exit {
+  position: fixed;
+  color: white;
+  right: 20px;
+  top: 1px;
+  padding: 10px;
+  font-size: 1.5rem;
+}
 .hamburger-ctn {
   position: fixed;
   right: 20px;
